# schizosearch

./: .gitignore  Cargo.toml  Makefile  README.md  default.nix  flake.nix  go.mod  go.sum  main.go  manifesto  module.nix  splashes
.github/workflows/: stale.yml
cmd/schizosearch/: main.go
internal/genericsearch/: genericsearch.go
internal/imagesearch/: imagesearch.go
internal/leetx/: leetx.go
internal/leetxmagnet/: leetxmagnet.go
internal/results/: results.go
nix/: module.nix
pkg/generic/: generic.go
pkg/libreurl/: libreurl.go
src/: config.rs  home.rs  lib.rs  main.rs
src/search/: brave.rs  duckduckgo.rs  img.rs  libre.rs  mod.rs  tests.rs  vids.rs
src/search/special/: calculator.rs  definition.rs  dictionary.rs  ip.rs  mod.rs
static/: index.html  style.css
static/public/: index.html
static/public/theme/: header.css  img.css  results.css  style.css
static/templates/: base.html  images.html  results.html  torrents.html
style/: color.scss  home.scss  img.scss  main.scss  results.scss
templates/: base.html  home.html  img.html  navbar.html  results.html  vids.html
web/: base.html  index.html  style.css  style.scss
web/templates/: base.html  images.html
web/theme/: colors.scss  header.scss  home.scss  img.scss  mixins.scss  results.scss  style.scss
