[package]
name = "schizosearch"
version = "0.1.0"
authors = [ "sioodmy <hello@sioodmy.dev>"]
edition = "2021"

[profile.release]
lto = "fat"
panic = "abort"
strip = "debuginfo"

[dependencies]
anyhow = "1.0.78"
askama = "0.12.1"
askama-enum = "0.0.2"
axum = { version = "0.7.3", features = ["macros"] }
clap = { version = "4.4.12", features = ["derive"] }
lazy_static = "1.4.0"
paste = "1.0.14"
rand = "0.8.5"
reqwest = "0.11.23"
scraper = "0.18.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.110"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
turf = "0.7.0"

[package.metadata.turf.browser_targets]
chrome = [80, 1, 2]
firefox = 65
safari = [12, 3]
